--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,8 +45,8 @@
   </head>
   <body>
     <div>
-      <img src="https://scontent.fmyc3-1.fna.fbcdn.net/v/t39.30808-6/278224480_1824738691276656_1404845404089360104_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=BMqCHzMPZvcAX8KZpD4&_nc_oc=AQk_ts813N3DIzda-NsxZ-_gBD2_5zv5pjppETel-a_cE6XIb6lY9_0lSqNMHXhRmVk&_nc_ht=scontent.fmyc3-1.fna&oh=00_AT-wM9A_Rf9EG_baMYJrIj2jqph2-az2Gq0Pn8u0Ma1DvA&oe=6256A65D" alt="2x2" width="120px" height="120px">
-      <h1><%= title %>Javier Antonio Leal Pino<%= title %></h1>
+      <img src="D:\Prácticas\carpeta\curriculum1\resources\images\Javier-Photo.png" alt="2x2" width="120px" height="120px">
+      <h1>Javier Antonio Leal Pino</h1>
       <p><span>Dirección:</span> Municipio Juan German Roscio, Parroquia San Juan, Av. Principal Acosta Carles, Residencias La Güaiquera, calle 1, casa #4</p>
       <p><span>Número de telefono:</span> +58-426-6497560</p>
       <fieldset>
