--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
   </head>
   <body>
     <div>
-      <img src="D:\Prácticas\carpeta\curriculum1\resources\images\Javier-Photo.png" alt="2x2" width="120px" height="120px">
+      <img src="public/images/Javier-Photo.png" alt="2x2" width="120px" height="120px">
       <h1>Javier Antonio Leal Pino</h1>
       <p><span>Dirección:</span> Municipio Juan German Roscio, Parroquia San Juan, Av. Principal Acosta Carles, Residencias La Güaiquera, calle 1, casa #4</p>
       <p><span>Número de telefono:</span> +58-426-6497560</p>
