--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javier Leal</title>
+    <title><%= title %>Javier Leal<%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <style>
       body
@@ -46,7 +46,7 @@
   <body>
     <div>
       <img src="public/images/Javier-Photo.png" alt="2x2" width="120px" height="120px">
-      <h1>Javier Antonio Leal Pino</h1>
+      <h1><%= title %>Javier Antonio Leal Pino<%= title %></h1>
       <p><span>Dirección:</span> Municipio Juan German Roscio, Parroquia San Juan, Av. Principal Acosta Carles, Residencias La Güaiquera, calle 1, casa #4</p>
       <p><span>Número de telefono:</span> +58-426-6497560</p>
       <fieldset>
