--- a/views/contactos.ejs
+++ b/views/contactos.ejs
@@ -14,28 +14,28 @@
     </div>>
     <div class="form__container">
         <div class="table">
-        <table>
-        <thead>
-        <tr>
-            <th scope="col"> Email</th>
-            <th scope="col"> Nombre </th>
-            <th scope="col"> Comentario </th>
-            <th scope="col">Fecha   -   Hora </th> 
-            <th scope="col"> IP </th>      
-        </tr>
-        </thead>
-        <tbody>
-            <% for(const producto of ct) { %>
-                <tr> 
-                    <td><%=producto.email%></td>
-                    <td><%=producto.nombre%></td>
-                    <td><%=producto.comentario%></td>
-                    <td><%=producto.fecha%></td>
-                    <td><%=producto.ip%></td>
-                </tr>
-            <% } %>
-        </tbody>
-        </table>
+            <table>
+                <thead>
+                  <tr>
+                    <th>Nombre</th>
+                    <th>Email</th>
+                    <th>Comentario</th>
+                    <th>Fecha-Hora</th>
+                    <th>IP</th>
+                  </tr>
+                </thead>
+                <tbody>
+                <% for (const obtener of tarea) { %>
+                  <tr>
+                    <th><%= obtener.nombre%></th>
+                    <td><%= obtener.email%></td>
+                    <td><%= obtener.comentario%></td>
+                    <td><%= obtener.fecha%></td>
+                    <td><%= obtener.ip%></td>
+                  </tr>
+                  <% } %>
+                </tbody>
+              </table>
         </div>
     </div>
 </body>
