--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,8 +77,8 @@
             <input type="hidden" name="ip" value="<%= tarea.ip%>"/>
             <input type="hidden" name="fecha" value="<%= tarea.fecha%>">
             
-                <span class="fa fa-phone"></span> 0416-3098826
-                <span class="fa fa-envelope-o"></span> alejrpl413x@gmail.com
+                <span class="fa fa-phone"></span> 0426-6497560
+                <span class="fa fa-envelope-o"></span> javierantoniolealpino@gmail.com
     <form>
   </body>
 </html>
