--- a/views/contactos.ejs
+++ b/views/contactos.ejs
@@ -6,11 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/style.css'>
     <link rel='index' href='/views/index.ejs'>
-    <title>Contactos</title>
+    <title>::Contactos::</title>
 </head>
 <body>
     <div class="form__contacts">
       <div class="form__title2"><h2>Contactos</h2></div>
+      <nav>
+        <ul>
+          <li>
+            <a class="btn__style" href="/">Ir al curriculum</a>
+          </li>
+          <li>
+            <a class="btn__style" href="/logout">Cerrar sesión</a>
+          </li>
+        </ul>
+      </nav>
         <div class="table">
           <div class="form__container">
             <table>
