corrigiendo curriculum+login otra vez

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
      <!--OpenGraph Details-->
      <meta property="og:title" content="Curriculum Viate - Javier Leal"/>
      <meta property="og:type" content="profile" />
-     <meta property="og:url" content="http://rakiong-p2.herokuapp.com/"/>
+     <meta property="og:url" content="https://curriculum-n-login.herokuapp.com/"/>
      <meta property="og:image" content="https://avatars.githubusercontent.com/u/101957005?s=400&u=5592959c131b6825c33c684e9db3575906d7e550&v=4"/>
      <meta property="og:description" content="¡Hola! Soy Javier, programador junior. Estoy disponible para cualquier proyecto, no dudes en contactarme.">
      <!--OpenGraph Details-->
